@@ -15,6 +15,10 @@ December??? 2005: 1.0.1: ldns-team
 	* Implement a crude RTT check, it now distinguishes between
 	  reacheable and unreacheable.
 	
+	Examples:
+	* ldns-dpa was added to the examples - this is Dns Packet
+	  Analyzer tool.
+	
 	Code:
 	* All networking code was moved to net.c
 
